Add import recipe and restructure database.
