# DataContracts/Recipes/GetRecipeResponse.cs
@@ -1,0 +1,5 @@
+﻿using DataContracts.Common.Recipe;
+
+namespace DataContracts.Recipes;
+
+public record GetRecipeResponse(Recipe Recipe);
