# DataContracts/Recipes/UpdateRecipeRequest.cs
@@ -1,5 +1,5 @@
-﻿using DataContracts.Common.Enums;
+﻿using DataContracts.Common.Recipe.Enums;
 
 namespace DataContracts.Recipes;
 
-public sealed record UpdateRecipeRequest(string Name, Category Category, EffortLevel EffortLevel);
+public sealed record UpdateRecipeRequest(string Title, Course Course, Difficulty Difficulty);
